# src/app/routers/routerIndex.ts
@@ -1,12 +1,11 @@
 import express from "express";
-import usersRouter from './usersRouter'
+import usersRouter from './users.router'
+import userTransationsRouter from "./usersTransations.router";
 
 const apiRouter = express.Router({ mergeParams: true })
 
 apiRouter.use("/users", usersRouter)
-apiRouter.use("/users/:id/transations", () => {
-    console.log('aaaaaaaa')
-})
+apiRouter.use("/users/transations", userTransationsRouter)
 
 apiRouter.use((err: any, _req: express.Request, res: express.Response, next: express.NextFunction) => {
     res.status(err.statusCode || 500).send(err);
